Fixed controller for profile

--- a/src/main/resources/templates/fragments/pageHead.html
+++ b/src/main/resources/templates/fragments/pageHead.html
@@ -47,7 +47,7 @@
                             <li><a th:href="@{/story}" href="../story.html">Post Animal Story</a></li>
                             <li><a th:href="@{/profile}" href="../profile.html">Edit my Profile</a></li>
                             <li><a th:href="@{/profile}" href="../profile.html">Update my animals</a></li>
-                            <li><a th:href="@{/login}" href="../login.html">Logout</a></li>
+                            <li><a th:href="@{/logout}" href="../login.html">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
