--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -3,6 +3,10 @@
 <!--/*@thymesVar id="user" type="com.fosterstory.entity.User"*/-->
 <!--/*@thymesVar id="role" type="com.fosterstory.entity.Role"*/-->
 <!--/*@thymesVar id="animal" type="com.fosterstory.entity.Animal"*/-->
+<!--/*@thymesVar id="type" type="com.fosterstory.entity.Type"*/-->
+<!--/*@thymesVar id="types" type="java.util.ArrayList<Type>"*/-->
+<!--/*@thymesVar id="breed" type="com.fosterstory.entity.Breed"*/-->
+<!--/*@thymesVar id="breeds" type="java.util.ArrayList<Breed>"*/-->
 <!--/*@thymesVar id="animals" type="java.util.ArrayList<Animal>"*/-->
 <!--/*@thymesVar id="count" type="java.lang.Integer"*/-->
 
@@ -49,14 +53,22 @@
                 Animal Type:
             </label>
             <select name="type" id="type">
-                <option value="1">Dog</option>
+                <option value="">select...</option>
+                <option th:each="type : ${types}"
+                        th:text="type.name"
+                        th:value="type.id"
+                        th:selected="${animal.type.id} == ${type.id}">Dog</option>
             </select>
 
             <label for="breed">
                 Animal Breed:
             </label>
             <select name="breed" id="breed">
-                <option value="1">Dog</option>
+                <option value="">select...</option>
+                <option th:each="breed : ${breeds}"
+                        th:text="breed.name"
+                        th:value="breed.id"
+                        th:selected="${animal.breed.id} == ${breed.id}">Collie</option>
             </select>
 
             <label for="age">
@@ -84,8 +96,9 @@
 
             </div>
 
-            <label for="tumblr">
-                <img src="../static/images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png" th:src="@{images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png}" alt="Tumblr logo" class="tumblr-logo"/>
+            <label for="tumblr" class="tumblr-logo">
+                <img src="../static/images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png"
+                     th:src="@{images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png}" alt="Tumblr logo" />
             </label>
             <input type="url" name="tumblr" id="tumblr" />
         </div>
