--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -101,7 +101,7 @@
                     <img src="../static/images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png"
                          th:src="@{images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png}" alt="Tumblr logo" />
                 </label>
-                <input type="url" name="tumblr" id="tumblr" />
+                <input type="url" name="tumblr" id="tumblr" th:value="*{tumblr}"/>
             </div>
 
             <div class="rightColumn">
