--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -12,11 +12,17 @@
 
 <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous" />
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+          crossorigin="anonymous" />
     <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}" />
     <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script language="JavaScript" src="../static/script/breedCheck.js" th:src="@{script/breedCheck.js}"></script>
 </head>
 <body>
     <header class="row" th:replace="fragments/pageHead :: pageHead">
@@ -28,10 +34,10 @@
         <h3>Search for an Animal:</h3>
         <div class="row">
         <div class="col-md-2">
-            <label for="typeId">
+            <label for="type">
                 <strong>Type:</strong>
             </label>
-            <select class="form-control" name="typeId" id="typeId">
+            <select class="form-control" name="type" id="type">
                 <option value="">select...</option>
                 <option th:each="type : ${types}"
                         th:text="${type.name}"
@@ -41,10 +47,10 @@
         </div>
 
         <div class="col-md-2">
-            <label for="breedId">
+            <label for="breed">
                 <strong>Breed:</strong>
             </label>
-            <select class="form-control" name="breedId" id="breedId">
+            <select class="form-control" name="breed" id="breed">
                 <option value="">select...</option>
                 <option th:each="breed : ${breeds}"
                         th:text="${breed.name}"
