--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -227,7 +227,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group">Question for tomorrow
                         <label class="col-lg-3 control-label" for="zip">
                             ZIP Code:
                         </label>
