--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -3,6 +3,7 @@
 <!--/*@thymesVar id="user" type="com.fosterstory.entity.User"*/-->
 <!--/*@thymesVar id="role" type="com.fosterstory.entity.Role"*/-->
 <!--/*@thymesVar id="animal" type="com.fosterstory.entity.Animal"*/-->
+<!--/*@thymesVar id="animal1" type="com.fosterstory.entity.Animal"*/-->
 <!--/*@thymesVar id="type" type="com.fosterstory.entity.Type"*/-->
 <!--/*@thymesVar id="types" type="java.util.ArrayList<Type>"*/-->
 <!--/*@thymesVar id="breed" type="com.fosterstory.entity.Breed"*/-->
@@ -12,11 +13,20 @@
 
 <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous" />
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+          crossorigin="anonymous" />
     <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}" />
     <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script language="JavaScript" src="../static/script/breedCheck.js"
+            th:src="@{script/breedCheck.js}"></script>
+    <script language="JavaScript" src="../static/script/animalCheck.js"
+            th:src="@{script/animalCheck.js}"></script>
 </head>
 <body>
 
@@ -36,9 +46,11 @@
         <div class="row" th:if="${count >1}">
             <label for="animal-select">Select the animal you are posting about</label>
             <select name="animal-select" id="animal-select">
-                <option th:each="animal : ${animals}"
-                        th:value="${animal.id}"
-                        th:text="${animal.name}">rover</option>
+                <option value="new" th:if="${animal.id} == null" th:selected="${animal.id} == null">New animal</option>
+                <option th:each="animal1 : ${animals}"
+                        th:value="${animal1.id}"
+                        th:text="${animal1.name}"
+                        th:selected="${animal1} == ${animal}">rover</option>
             </select>
         </div>
     </form>
@@ -59,7 +71,8 @@
                     <option value="">select...</option>
                     <option th:each="type : ${types}"
                             th:text="${type.name}"
-                            th:value="${type.id}">Dog</option>
+                            th:value="${type.id}"
+                            th:selected="${type} == *{breed?.type}">Dog</option>
                 </select>
 
                 <label for="breed">
@@ -69,7 +82,8 @@
                     <option value="">select...</option>
                     <option th:each="breed : ${breeds}"
                             th:text="${breed.name}"
-                            th:value="${breed.id}">Collie</option>
+                            th:value="${breed.id}"
+                            th:selected="${breed} == *{breed}">Collie</option>
                 </select>
 
                 <label for="age">
@@ -117,6 +131,7 @@
             </div>
         </div>
         <button class="btn" type="submit" id="save" name="action" value="save">Save</button>
+        <button class="btn" type="submit" id="clear" name="action" value="clear">Clear</button>
     </form>
 </div>
 
