Created entities with associations for TumblrPhoto and Photo, Persisted them, linked them to user and animal

--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -115,7 +115,7 @@
                     <img src="../static/images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png"
                          th:src="@{images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png}" alt="Tumblr logo" />
                 </label>
-                <input type="url" name="tumblr" id="tumblr" th:value="*{tumblr}"/>
+                <input type="url" name="tumblr" id="tumblr" th:value="*{tumblr}" placeholder="blog name"/>.tumblr.com
             </div>
 
             <div class="rightColumn">
