fix DB to correct link between Animal and User, add checkForm.js, update breedCheck.js to add selct... to the list

--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <button class="btn" type="submit" id="save" name="action" value="save">Save</button>
-        <button class="btn" type="submit" id="clear" name="action" value="clear">Clear</button>
+        <button class="btn" type="submit" id="clear" name="action" value="clear">Add new Animal</button>
     </form>
 </div>
 
