--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -14,6 +14,7 @@
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"/>
     <link rel="stylesheet" href="../static/css/styles.css" th:href="@{css/styles.css}"/>
     <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet"/>
+    <script language="JavaScript" src="../static/script/checkForm.js" th:src="@{script/checkForm.js}"></script>
     <title>Update user profile</title>
 </head>
 <body>
@@ -226,7 +227,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group">Question for tomorrow
+                    <div class="form-group">
                         <label class="col-lg-3 control-label" for="zip">
                             ZIP Code:
                         </label>
